--- a/manifest.yml
+++ b/manifest.yml
@@ -4,7 +4,4 @@ category: Interactive Apps
 subcategory: Servers
 role: batch_connect
 description: |
-  This app will launch [Galaxy 19.09] on the [Owens cluster].
-
-  [Galaxy 19.09]: https://galaxyproject.org/
-  [Owens cluster]: https://www.osc.edu/resources/technical_support/supercomputers/owens
+  This app will launch a Galaxy 24.1 session.
