--- a/form.yml
+++ b/form.yml
@@ -1,6 +1,7 @@
 ---
 cluster: "hpcc"
 attributes:
+  modules: "miniconda3/"
   bc_account: null
   bc_num_slots: 1
   num_cores:
@@ -24,13 +25,6 @@ attributes:
     data-target-file-type: dirs
     readonly: false
     help: "Select where your galaxy database will be or is currently located. Defaults to your $HOME directory"
-  import_dir:
-    label: "Import directory"
-    data-filepicker: true
-    data-target-file-type: dirs
-    readonly: false
-    help: | 
-      Select where your import directory is located (Defaults to where your 'Database Directory' is located). All files/directories located here will be accessible in Galaxy.</br> NOTE: Symbolic files/directories will have to be import by Galaxy admin users.
   runtime:
     widget: "text_field"
     label: "Job runtime"
@@ -39,6 +33,14 @@ attributes:
     help: |
       In the format of DD-HH:MM:SS. Eg. 2 days, 13 hours, 37 minutes, 42 seconds would be "2-13:37:42".<br/>
       Max runtime is determined by the queue, see <a href="https://hpcc.ucr.edu/manuals/hpc_cluster/queue/" target="_blank">Queue Policies</a> for more details.
+  extra_modules:
+    widget: "text_field"
+    label: "Additional modules"
+    pattern: "[a-zA-Z0-9/.\\-+_ ]*"
+    value: ""
+    help: |
+      Additional modules to load when loading the Galaxy Session, separated by a space.<br/>
+      eg. 'boost/1.80.1 cuda/11.8 vmd/1.9.3'
   extra_slurm:
     widget: "text_field"
     label: "Additional Slurm Arguments"
@@ -59,11 +61,12 @@ attributes:
       - [ "local",     "local"]
       - [ "cluster", "slurm" ]
 form:
+  - modules
   - working_dir
-  - import_dir
   - num_cores
   - num_mem
   - runtime
   - auto_queues
+  - extra_modules
   - extra_slurm
   - job_runner
